# icsaet

icsaet-mcp/: .gitignore  CHANGELOG.md  LICENSE  README.md  TROUBLESHOOTING.md  pyproject.toml
icsaet-mcp/src/icsaet_mcp/: __init__.py  __main__.py  logging_config.py  prompts.py  server.py  tools.py  utils.py
icsaet-mcp/tests/: __init__.py  conftest.py  mock_server.py  test_integration.py  test_logging.py  test_prompts.py  test_server.py  test_tools.py  test_utils.py
specifications/: SCRUM-5-cursor-mcp-server-icaet.md  task-01-plan.md  task-01.md  task-02-plan.md  task-02.md  task-03-plan.md  task-03.md  task-04-plan.md  task-04.md  task-05-plan.md  task-05.md  task-06-plan.md  task-06.md  task-07-plan.md  task-07.md  task-08-plan.md  task-08.md
