[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icsaet-mcp"
version = "0.1.0"
description = "MCP server for ICAET query access"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ICAET MCP Contributors"}
]
keywords = ["mcp", "cursor", "icaet", "knowledge-base", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/[USERNAME]/icsaet-mcp"
Repository = "https://github.com/[USERNAME]/icsaet-mcp"
Issues = "https://github.com/[USERNAME]/icsaet-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "pytest-cov>=4.1.0",
    "flask>=2.3.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
icsaet-mcp = "icsaet_mcp.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=icsaet_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]

[tool.coverage.run]
source = ["src/icsaet_mcp"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass"
]

